--- a/nodebootstrap/public/index.html
+++ b/nodebootstrap/public/index.html
@@ -1,1 +1,63 @@
-index.html
+<!DOCTYPE html><html>
+<head>
+	<title>UnBias.Me</title>
+	<link rel="stylesheet" href="/bootstrap/css/bootstrap.css">
+	<link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css">
+	<link rel="stylesheet" href="/bootstrap/css/bootstrap-theme.css">
+	<link rel="stylesheet" href="/bootstrap/css/bootstrap-theme.min.css">
+	<link rel="stylesheet" href="/stylesheets/style.css">
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
+	<script src="/bootstrap/js/bootstrap.js"></script>
+	<script src="/backbone/backbone-min.js"></script>
+	<script src="/javascripts/graph.js"></script>
+	<script src="/javascripts/tip.js"></script>
+	<script src="http://d3js.org/d3.v3.min.js"></script>
+</head>
+
+<body>
+
+
+
+    <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">ANALYZR.INFO</a>
+        </div>
+        <div class="collapse navbar-collapse">
+          <ul class="nav navbar-nav">
+            <li class="active"><a href="#">Home</a></li>
+            <li><a href="#about">About</a></li>
+          </ul>
+        </div><!--/.nav-collapse -->
+      </div>
+    </div>
+
+
+ <div class="jumbotron">
+      <div class="container">
+        <h1>Hello, world!</h1>
+        <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
+        <p><a class="btn btn-primary btn-lg" role="button">Learn more &raquo;</a></p>
+      </div>
+    </div>
+
+		
+		<form name="urlInForm" method="post" action="#" onsubmit="return linkRequest();">Enter Article URL<input type="text" id="urlIn">
+		<input type="submit" value="Submit"></key>
+		</form>
+
+
+		<div id="tooltip" class="hidden"></div>
+		<div id="graph"></div>
+
+
+
+
+</body>
+</html>
