--- a/nodebootstrap/public/index.html
+++ b/nodebootstrap/public/index.html
@@ -53,7 +53,7 @@
         </p>
       </div>
     </div>
-
+<center>
 <form class="form-inline" role="form" name="urlInForm" onsubmit="return linkRequest();">
   <div class="form-group">
     <label class="sr-only" for="urlInForm">URL: </label>
@@ -70,7 +70,7 @@
 
 		<div id="tooltip" class="hidden"></div>
 		<div id="graph"></div>
-
+</center>
 
 
 
