--- a/nodebootstrap/public/index.html
+++ b/nodebootstrap/public/index.html
@@ -56,7 +56,7 @@
 <center>
 <form class="form-inline" role="form" name="urlInForm" onsubmit="return linkRequest();">
   <div class="form-group">
-    <label class="sr-only" for="urlInForm">URL: </label>
+    <label class="sr-only" for="urlIn">URL: </label>
     <input type="text" class="form-control" id="urlIn" placeholder="Enter URL">
   </div>
   <button type="submit" class="btn btn-default">Submit</button>
