Added css stuff and basic boxes to use later

--- a/nodebootstrap/public/index.html
+++ b/nodebootstrap/public/index.html
@@ -48,6 +48,7 @@
     </div>
 
 <center>
+
 <form class="form-inline" role="form" name="urlInForm" onsubmit="return linkRequest();">
   <div class="form-group">
     <label class="sr-only" for="urlIn">URL: </label>
@@ -56,14 +57,27 @@
   <button type="submit" class="btn btn-default">Submit</button>
 </form>	
 
-<!--
-		<form name="urlInForm" method="post" action="#" onsubmit="return linkRequest();">Enter Article URL<input type="text" id="urlIn">
-		<input type="submit" value="Submit"></key>
-		</form>
--->
-
 		<div id="tooltip" class="hidden"></div>
 		<div id="graph"></div>
+<div class="row">
+    <div class="col-6 col-sm-6 col-lg-4">
+        <h2>Heading</h2>
+        <p> This is a box</p>
+        <p>
+        <a class="btn btn-default" href="google.com" role="button">
+        View details &raquo;</a>
+        </p>
+    </div><!--/span-->
+    <div class="col-6 col-sm-6 col-lg-4">
+        <h2>Heading</h2>
+        <p>This is another box. </p>
+        <p>
+        <a class="btn btn-default" href="facebook.com" role="button">
+        View details &raquo;</a>
+        </p>
+    </div><!--/span-->
+</div> <!--/row-->
+
 </center>
 
 
