--- a/nodebootstrap/public/index.html
+++ b/nodebootstrap/public/index.html
@@ -60,19 +60,19 @@
 		<div id="tooltip" class="hidden"></div>
 		<div id="graph"></div>
 <div class="row">
-    <div class="col-6 col-sm-6 col-lg-4">
+    <div class="col-2 col-sm-2 col-lg-2">
         <h2>Heading</h2>
         <p> This is a box</p>
         <p>
-        <a class="btn btn-default" href="google.com" role="button">
+        <a class="btn btn-default" href="www.google.com" role="button">
         View details &raquo;</a>
         </p>
     </div><!--/span-->
-    <div class="col-6 col-sm-6 col-lg-4">
+    <div class="col-2 col-sm-2 col-lg-2">
         <h2>Heading</h2>
         <p>This is another box. </p>
         <p>
-        <a class="btn btn-default" href="facebook.com" role="button">
+        <a class="btn btn-default" href="www.facebook.com" role="button">
         View details &raquo;</a>
         </p>
     </div><!--/span-->
