--- a/nodebootstrap/public/index.html
+++ b/nodebootstrap/public/index.html
@@ -60,7 +60,7 @@
 		<div id="tooltip" class="hidden"></div>
 		<div id="graph"></div>
 <div class="row">
-    <div class="col-2 col-sm-2 col-lg-2">
+    <div class="col-3 col-sm-3 col-lg-3">
         <h2>Heading</h2>
         <p> This is a box</p>
         <p>
@@ -68,7 +68,59 @@
         View details &raquo;</a>
         </p>
     </div><!--/span-->
-    <div class="col-2 col-sm-2 col-lg-2">
+    <div class="col-3 col-sm-3 col-lg-3">
+        <h2>Heading</h2>
+        <p>This is another box. </p>
+        <p>
+        <a class="btn btn-default" href="www.facebook.com" role="button">
+        View details &raquo;</a>
+        </p>
+    </div><!--/span-->
+    <div class="col-3 col-sm-3 col-lg-3">
+        <h2>Heading</h2>
+        <p>This is another box. </p>
+        <p>
+        <a class="btn btn-default" href="www.facebook.com" role="button">
+        View details &raquo;</a>
+        </p>
+    </div><!--/span-->
+</div> <!--/row-->
+<div class="row">
+    <div class="col-3 col-sm-3 col-lg-3">
+        <h2>Heading</h2>
+        <p> This is a box</p>
+        <p>
+        <a class="btn btn-default" href="www.google.com" role="button">
+        View details &raquo;</a>
+        </p>
+    </div><!--/span-->
+    <div class="col-3 col-sm-3 col-lg-3">
+        <h2>Heading</h2>
+        <p>This is another box. </p>
+        <p>
+        <a class="btn btn-default" href="www.facebook.com" role="button">
+        View details &raquo;</a>
+        </p>
+    </div><!--/span-->
+    <div class="col-3 col-sm-3 col-lg-3">
+        <h2>Heading</h2>
+        <p>This is another box. </p>
+        <p>
+        <a class="btn btn-default" href="www.facebook.com" role="button">
+        View details &raquo;</a>
+        </p>
+    </div><!--/span-->
+</div> <!--/row-->
+<div class="row">
+    <div class="col-3 col-sm-3 col-lg-3">
+        <h2>Heading</h2>
+        <p> This is a box</p>
+        <p>
+        <a class="btn btn-default" href="www.google.com" role="button">
+        View details &raquo;</a>
+        </p>
+    </div><!--/span-->
+    <div class="col-3 col-sm-3 col-lg-3">
         <h2>Heading</h2>
         <p>This is another box. </p>
         <p>
