setting up 12 boxes so that brian can work on stuff

--- a/nodebootstrap/public/index.html
+++ b/nodebootstrap/public/index.html
@@ -128,6 +128,40 @@
         View details &raquo;</a>
         </p>
     </div><!--/span-->
+    <div class="col-3 col-sm-3 col-lg-3">
+        <h2>Heading</h2>
+        <p>This is another box. </p>
+        <p>
+        <a class="btn btn-default" href="www.facebook.com" role="button">
+        View details &raquo;</a>
+        </p>
+    </div><!--/span-->
+</div> <!--/row-->
+<div class="row">
+    <div class="col-3 col-sm-3 col-lg-3">
+        <h2>Heading</h2>
+        <p> This is a box</p>
+        <p>
+        <a class="btn btn-default" href="www.google.com" role="button">
+        View details &raquo;</a>
+        </p>
+    </div><!--/span-->
+    <div class="col-3 col-sm-3 col-lg-3">
+        <h2>Heading</h2>
+        <p>This is another box. </p>
+        <p>
+        <a class="btn btn-default" href="www.facebook.com" role="button">
+        View details &raquo;</a>
+        </p>
+    </div><!--/span-->
+    <div class="col-3 col-sm-3 col-lg-3">
+        <h2>Heading</h2>
+        <p>This is another box. </p>
+        <p>
+        <a class="btn btn-default" href="www.facebook.com" role="button">
+        View details &raquo;</a>
+        </p>
+    </div><!--/span-->
 </div> <!--/row-->
 
 </center>
