--- a/nodebootstrap/public/index.html
+++ b/nodebootstrap/public/index.html
@@ -46,7 +46,6 @@
         </p>
       </div>
     </div>
-    <!-- Hello Brian -->
 <center>
 
 <form class="form-inline" role="form" name="urlInForm" onsubmit="return linkRequest();">
@@ -59,8 +58,10 @@
 
 		<div id="tooltip" class="hidden"></div>
 		<div id="graph"></div>
+
+<div id="dataBlocks">
 <div class="row">
-    <div class="col-3 col-sm-3 col-lg-3">
+    <div class="col-3 col-sm-3L">
         <h2>Heading</h2>
         <p> This is a box</p>
         <p>
@@ -68,7 +69,7 @@
         View details &raquo;</a>
         </p>
     </div><!--/span-->
-    <div class="col-3 col-sm-3 col-lg-3">
+    <div class="col-3 col-sm-3M">
         <h2>Heading</h2>
         <p>This is another box. </p>
         <p>
@@ -76,7 +77,7 @@
         View details &raquo;</a>
         </p>
     </div><!--/span-->
-    <div class="col-3 col-sm-3 col-lg-3">
+    <div class="col-3 col-sm-3R">
         <h2>Heading</h2>
         <p>This is another box. </p>
         <p>
@@ -86,7 +87,7 @@
     </div><!--/span-->
 </div> <!--/row-->
 <div class="row">
-    <div class="col-3 col-sm-3 col-lg-3">
+    <div class="col-3 col-sm-3L">
         <h2>Heading</h2>
         <p> This is a box</p>
         <p>
@@ -94,7 +95,7 @@
         View details &raquo;</a>
         </p>
     </div><!--/span-->
-    <div class="col-3 col-sm-3 col-lg-3">
+    <div class="col-3 col-sm-3M">
         <h2>Heading</h2>
         <p>This is another box. </p>
         <p>
@@ -102,7 +103,7 @@
         View details &raquo;</a>
         </p>
     </div><!--/span-->
-    <div class="col-3 col-sm-3 col-lg-3">
+    <div class="col-3 col-sm-3R">
         <h2>Heading</h2>
         <p>This is another box. </p>
         <p>
@@ -112,7 +113,7 @@
     </div><!--/span-->
 </div> <!--/row-->
 <div class="row">
-    <div class="col-3 col-sm-3 col-lg-3">
+    <div class="col-3 col-sm-3L">
         <h2>Heading</h2>
         <p> This is a box</p>
         <p>
@@ -120,7 +121,7 @@
         View details &raquo;</a>
         </p>
     </div><!--/span-->
-    <div class="col-3 col-sm-3 col-lg-3">
+    <div class="col-3 col-sm-3M">
         <h2>Heading</h2>
         <p>This is another box. </p>
         <p>
@@ -128,7 +129,7 @@
         View details &raquo;</a>
         </p>
     </div><!--/span-->
-    <div class="col-3 col-sm-3 col-lg-3">
+    <div class="col-3 col-sm-3R">
         <h2>Heading</h2>
         <p>This is another box. </p>
         <p>
@@ -138,7 +139,7 @@
     </div><!--/span-->
 </div> <!--/row-->
 <div class="row">
-    <div class="col-3 col-sm-3 col-lg-3">
+    <div class="col-3 col-sm-3L">
         <h2>Heading</h2>
         <p> This is a box</p>
         <p>
@@ -146,7 +147,7 @@
         View details &raquo;</a>
         </p>
     </div><!--/span-->
-    <div class="col-3 col-sm-3 col-lg-3">
+    <div class="col-3 col-sm-3M">
         <h2>Heading</h2>
         <p>This is another box. </p>
         <p>
@@ -154,7 +155,7 @@
         View details &raquo;</a>
         </p>
     </div><!--/span-->
-    <div class="col-3 col-sm-3 col-lg-3">
+    <div class="col-3 col-sm-3R">
         <h2>Heading</h2>
         <p>This is another box. </p>
         <p>
@@ -163,6 +164,7 @@
         </p>
     </div><!--/span-->
 </div> <!--/row-->
+</div>
 
 </center>
 
