--- a/nodebootstrap/public/index.html
+++ b/nodebootstrap/public/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html><html>
 <head>
-	<title>UnBias.Me</title>
+	<title>Analyzr</title>
 	<link rel="stylesheet" href="/bootstrap/css/bootstrap.css">
 	<link rel="stylesheet" href="/stylesheets/style.css">
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
@@ -15,156 +15,89 @@
 
 
 
-    <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">ANALYZR.INFO</a>
-        </div>
-        <div class="collapse navbar-collapse">
-          <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="#about">About</a></li>
-          </ul>
-        </div><!--/.nav-collapse -->
-      </div>
-    </div>
+
 
   <div class="jumbotron">
+
       <div class="container">
-        <h1>All of the facts, none of the <b>bullshit.</b></h1>
-        <p>
-        Take the guesswork out of analyzing text. <br>
-        Whether it's a political article, tech review, or blog post, 
-        Analyzr takes the key subjects and displays connotative information
-        about them in easy to read, presentable graphs and charts.
+          <div id="header"><font size=30 color="#9d1f0f">ANALYZR</font></div>
+          <h1>All of the facts, none of the <b>bullshit.</b></h1>
+          <p>
+            Take the guesswork out of analyzing text. <br>
+            Whether it's a political article, tech review, or blog post, 
+            Analyzr takes the key subjects and displays connotative information
+            about them in easy to read, presentable graphs and charts.
         </p>
-      </div>
-    </div>
+        <center>
+            <form class="form-inline" role="form" name="urlInForm" onsubmit="return linkRequest();">
+              <div class="form-group">
+                <label class="sr-only" for="urlIn">URL: </label>
+                <input type="text" class="form-control" id="urlIn" placeholder="Enter URL">
+            </div>
+            <button type="submit" class="redbtn">analyz</button>
+        </form> 
+    </center>
+</div>
+</div>
 <center>
 
-<form class="form-inline" role="form" name="urlInForm" onsubmit="return linkRequest();">
-  <div class="form-group">
-    <label class="sr-only" for="urlIn">URL: </label>
-    <input type="text" class="form-control" id="urlIn" placeholder="Enter URL">
-  </div>
-  <button type="submit" class="btn btn-default">Submit</button>
-</form>	
 
-		<div id="tooltip" class="hidden"></div>
-		<div id="graph"></div>
-<br><br><br>
-<div id="dataBlocks">
-<div class="row">
-    <div class="col-3 col-sm-3L">
-        <h2>Heading</h2>
-        <p> This is a box</p>
-        <p>
-        <a class="btn btn-default" href="www.google.com" role="button">
-        View details &raquo;</a>
-        </p>
+
+  <div id="tooltip" class="hidden"></div>
+  <div id="graph"></div>
+  <br><br><br>
+  <div id="allDataBlocks">
+    <div class="row">
+        <div class="col-3 col-sm-3A">
+            <div class="dataBlock"></div>
+        </div><!--/span-->
+        <div class="col-3 col-sm-3B">
+            <div class="dataBlock"></div>
+        </div><!--/span-->
+        <div class="col-3 col-sm-3C">
+            <div class="dataBlock"></div>
+        </div><!--/span-->
+        <div class="col-3 col-sm-3D">
+            <div class="dataBlock"></div>
+        </div><!--/span-->
+    </div> <!--/row-->
+    <div class="row">
+
+        <div class="col-3 col-sm-3A">
+         <div class="dataBlock"></div>
+     </div><!--/span-->
+
+     <div class="col-3 col-sm-3B">
+        <div class="dataBlock"></div>
     </div><!--/span-->
-    <div class="col-3 col-sm-3M">
-        <h2>Heading</h2>
-        <p>This is another box. </p>
-        <p>
-        <a class="btn btn-default" href="www.facebook.com" role="button">
-        View details &raquo;</a>
-        </p>
+
+    <div class="col-3 col-sm-3C">
+        <div class="dataBlock"></div>
     </div><!--/span-->
-    <div class="col-3 col-sm-3R">
-        <h2>Heading</h2>
-        <p>This is another box. </p>
-        <p>
-        <a class="btn btn-default" href="www.facebook.com" role="button">
-        View details &raquo;</a>
-        </p>
-    </div><!--/span-->
+
+
+    <div class="col-3 col-sm-3D">
+            <div class="dataBlock"></div>
+        </div><!--/span-->
+
 </div> <!--/row-->
 <div class="row">
-    <div class="col-3 col-sm-3L">
-        <h2>Heading</h2>
-        <p> This is a box</p>
-        <p>
-        <a class="btn btn-default" href="www.google.com" role="button">
-        View details &raquo;</a>
-        </p>
+    <div class="col-3 col-sm-3A">
+        <div class="dataBlock"></div>
     </div><!--/span-->
-    <div class="col-3 col-sm-3M">
-        <h2>Heading</h2>
-        <p>This is another box. </p>
-        <p>
-        <a class="btn btn-default" href="www.facebook.com" role="button">
-        View details &raquo;</a>
-        </p>
+    <div class="col-3 col-sm-3B">
+        <div class="dataBlock"></div>
     </div><!--/span-->
-    <div class="col-3 col-sm-3R">
-        <h2>Heading</h2>
-        <p>This is another box. </p>
-        <p>
-        <a class="btn btn-default" href="www.facebook.com" role="button">
-        View details &raquo;</a>
-        </p>
+    <div class="col-3 col-sm-3C">
+        <div class="dataBlock"></div>
     </div><!--/span-->
+
+
+    <div class="col-3 col-sm-3D">
+        <div class="dataBlock"></div>
+        </div><!--/span-->
 </div> <!--/row-->
-<div class="row">
-    <div class="col-3 col-sm-3L">
-        <h2>Heading</h2>
-        <p> This is a box</p>
-        <p>
-        <a class="btn btn-default" href="www.google.com" role="button">
-        View details &raquo;</a>
-        </p>
-    </div><!--/span-->
-    <div class="col-3 col-sm-3M">
-        <h2>Heading</h2>
-        <p>This is another box. </p>
-        <p>
-        <a class="btn btn-default" href="www.facebook.com" role="button">
-        View details &raquo;</a>
-        </p>
-    </div><!--/span-->
-    <div class="col-3 col-sm-3R">
-        <h2>Heading</h2>
-        <p>This is another box. </p>
-        <p>
-        <a class="btn btn-default" href="www.facebook.com" role="button">
-        View details &raquo;</a>
-        </p>
-    </div><!--/span-->
-</div> <!--/row-->
-<div class="row">
-    <div class="col-3 col-sm-3L">
-        <h2>Heading</h2>
-        <p> This is a box</p>
-        <p>
-        <a class="btn btn-default" href="www.google.com" role="button">
-        View details &raquo;</a>
-        </p>
-    </div><!--/span-->
-    <div class="col-3 col-sm-3M">
-        <h2>Heading</h2>
-        <p>This is another box. </p>
-        <p>
-        <a class="btn btn-default" href="www.facebook.com" role="button">
-        View details &raquo;</a>
-        </p>
-    </div><!--/span-->
-    <div class="col-3 col-sm-3R">
-        <h2>Heading</h2>
-        <p>This is another box. </p>
-        <p>
-        <a class="btn btn-default" href="www.facebook.com" role="button">
-        View details &raquo;</a>
-        </p>
-    </div><!--/span-->
-</div> <!--/row-->
-</div>
+</div><!--/allDataBlocks-->
 
 </center>
 
