--- a/nodebootstrap/public/index.html
+++ b/nodebootstrap/public/index.html
@@ -34,7 +34,7 @@
                 <label class="sr-only" for="urlIn">URL: </label>
                 <input type="text" class="form-control" id="urlIn" placeholder="Enter URL">
             </div>
-            <button type="submit" class="redbtn">analyz</button>
+            <button type="submit" class="redbtn">analyz!</button>
         </form> 
     </center>
 </div>
@@ -101,7 +101,14 @@
 
 </center>
 
+<br><br><br><br><br><br><br><br>
+
+<div class="footer">
+    <p>This <strong>CSS Sticky Footer</strong> simply stays put.</p>
+    <p class="copyright">Copyright &copy; 2013 Ryan Fait &mdash; <a href="http://ryanfait.com/" title="Las Vegas Web Design">Las Vegas Web Design</a></p>
+</div>
 
 
 </body>
+
 </html>
