about page fixes

--- a/nodebootstrap/public/about.html
+++ b/nodebootstrap/public/about.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<title>Analyzr|About</title>
+	<title>Analyzr | About</title>
 	<link rel="stylesheet" href="/bootstrap/css/bootstrap.css">
 	<link rel="stylesheet" href="/stylesheets/style.css">
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
@@ -15,18 +15,12 @@
     <div class="jumbotron">
         <div class="container">
         <div id="header">
-            <font size=30 color="#9d1f0f">ANALYZR|About</font>
+            <font size=30 color="#9d1f0f">ANALYZR</font>
         </div>
         <h1>About Us.</h1>
-        <p>
-            Take the guesswork out of analyzing text. <br>
-            Whether it's a political article, tech review, or blog post, 
-            Analyzr takes the key subjects and displays connotative information
-            about them in easy to read, presentable graphs and charts.
-        </p>
         </div>
     </div>
-
+    <div class="container">
     <div class="panel panel-default">
         <div class="panel-body">
     Analyzr was born out of a need to accurately and objectively summarize the 
@@ -56,6 +50,7 @@
     quick and objective manner. We then display the information in easy to 
     read, yet informative, graphs and tables.
         </div>
+    </div>
     </div>
     </body>
 </html>
