about page stylin

--- a/nodebootstrap/public/about.html
+++ b/nodebootstrap/public/about.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <div class="jumbotron">
+    <div class="jumbotronAbout">
         <div class="container">
         <div id="header">
             <font size=30 color="#9d1f0f">ANALYZR</font>
@@ -24,11 +24,12 @@
     <div class="panel panel-default">
         <div class="panel-body">
     Analyzr was born out of a need to accurately and objectively summarize the 
-    biases of articles. <br> 
+    mood of articles. <br> 
     Being programmers, we read A LOT of tech articles, most talking about the 
     same trending topics in the industry. 
     And for a long time, we would compare these articles and their 
     (sometimes justified) biases in one of two possible ways:
+    <br>
     <ul class="list-group">
     <li class="list-group-item">reading all of them, one by one, and developing 
     a thorough understanding of each</li>
