about page stylin 2

--- a/nodebootstrap/public/about.html
+++ b/nodebootstrap/public/about.html
@@ -22,7 +22,7 @@
     </div>
     <div class="container">
     <div class="panel panel-default">
-        <div class="panel-body">
+        <div class="panel-body"><font size=15>
     Analyzr was born out of a need to accurately and objectively summarize the 
     mood of articles. <br> 
     Being programmers, we read A LOT of tech articles, most talking about the 
@@ -49,7 +49,7 @@
     Analyzr does just that. Using NLP, we are able to gather information about 
     topics the articles covered, and the articles sentiment about them, in a 
     quick and objective manner. We then display the information in easy to 
-    read, yet informative, graphs and tables.
+    read, yet informative, graphs and tables.</font>
         </div>
     </div>
     </div>
