about page stylin 6

--- a/nodebootstrap/public/about.html
+++ b/nodebootstrap/public/about.html
@@ -29,14 +29,15 @@
     Being programmers, we read A LOT of tech articles, most talking about the 
     same trending topics in the industry. 
     And for a long time, we would compare these articles and their 
-    (sometimes justified) biases in one of two possible ways:
+    (sometimes justified) biases in one of two possible ways:</p>
     <br>
     <ul class="list-group">
-    <li class="list-group-item">reading all of them, one by one, and developing 
+    <li class="list-group-item" style="font-size:18px">reading all of them, one by one, and developing 
     a thorough understanding of each</li>
-    <li class="list-group-item">delegating the reading of each article to 
+    <li class="list-group-item" style="font-size:18px">delegating the reading of each article to 
     friends, and then discuss them at length with eachother</li>
     </ul>
+    <p style="font-size:18px">
     However, we realized that both of these methods has a serious flaw: The reader's 
     inner bias. The articles' true sentiment was
     lost in the distortion caused by our own biases, meaning that two people 
