commiting brians changes to the stuff

--- a/nodebootstrap/public/about.html
+++ b/nodebootstrap/public/about.html
@@ -24,7 +24,9 @@
     <div class="panel panel-default">
         <div class="panel-body">
     <p style="font-size:18px">
-    Analyzr was born out of a need to accurately and objectively summarize the 
+    <!--
+    Analyzr was born out of a need t
+    o accurately and objectively summarize the 
     mood of articles. <br> 
     Being programmers, we read A LOT of tech articles, most talking about the 
     same trending topics in the industry. 
@@ -51,7 +53,53 @@
     Analyzr does just that. Using NLP, we are able to gather information about 
     topics the articles covered, and the articles sentiment about them, in a 
     quick and objective manner. We then display the information in easy to 
-    read, yet informative, graphs and tables.</p>
+    read, yet informative, graphs and tables.</p>-->
+
+
+
+Analyzr was born out of a need to accurately and objectively summarize the mood of articles.
+<p>
+
+As programmers, we read a lot of tech articles, and have noticed that many of these articles discuss the same trending topics in the tech industry.  Each article has a positive/negative spin on each subject, whether that subject be a person, company, technology, or other entity.  As readers we pick up on these sentiments, but as programmers we ask: Can computers do the same?
+<p>
+//////////////
+ANALYZR:
+/////////////
+<p>
+Analyzr takes in the URL of an article and finds the topics which are most relevant to the article.  It then calculates the sentiment/mood the article has towards each topic and presents the data in dynamic graphs and tables.
+<p>
+/////////////
+Graph:
+//////////////
+<p>
+The data is graphed on an x-axis from negative to positive sentiment.  Each subject is colored to match its sentiment and its size represents the relevance to the article.  
+insert picture of graph
+<p>
+////////////////////
+Table:
+///////////////
+<p>
+The raw data is presented in a table.  Each subject is presented along with its relevence and sentiment to the article.  
+insert picture of table
+<p>
+//////////////////
+Dynamic:
+////////////////
+<p>
+Hovering over a datapoint highlights the data in both the graph and table.  The graph also displays a popup showing the data for that subject.
+
+<p>
+/////////////////
+Filtering:
+/////////////////
+<p>
+To accommodate many styles of articles, analyzr allows filtering by subject type.  By default analyzr will display the most relevant subjects, but you can filter by subject type.  Analyzr can detect hundreds of subject types ranging from countries to operating systems, and allows you to filter the data by the types it detects.
+
+
+
+<p>
+
+
         </div>
     </div>
     </div>
