revision of about page, formatting

--- a/nodebootstrap/public/about.html
+++ b/nodebootstrap/public/about.html
@@ -27,9 +27,10 @@
     Analyzr was born out of a need to accurately and objectively summarize the mood of articles.</p>
 
     As programmers, we read a lot of tech articles, and have noticed that many of these articles 
-    discuss the same trending topics in the tech industry.  Each article has a positive/negative 
-    spin on each subject, whether that subject be a person, company, technology, or other entity. 
+    discuss the same trending topics in the tech industry. Each article has a positive/negative 
+    spin on each subject, whether that subject be a person, company, technology, or other entity.<br> 
     As readers we pick up on these sentiments, but as programmers we ask: Can computers do the same?
+    And if they can, can we utilize them to make understanding articles easier?<br>
     <div class="panel panel-default">
       <div class="panel-heading">
         <h3 class="panel-title">ANALYZR</h3>
@@ -37,11 +38,13 @@
       <div class="panel-body">
       Analyzr takes in the URL of an article and finds the topics which are most relevant to the article. 
       It then calculates the sentiment/mood the article has towards each topic and presents the data in dynamic 
-      graphs and tables.
-      </div>
-    </div>
+      graphs and tables. <br>
+      Analyzr allows users to input the address of an article, and using natural language processing 
+      (via Alchemy API), extracts a list of topics mentioned in the article, and a detailed analysis
+      of the article's sentiment towards those topics. <br>
+      Analyzr then presents the information in a variety of ways:
 
-    <div class="panel panel-default">
+      <div class="panel panel-default">
       <div class="panel-heading">
         <h3 class="panel-title">Graph:</h3>
       </div>
@@ -60,7 +63,9 @@
      sentiment to the article.  insert picture of table
       </div>
     </div>
-    
+    </div>
+    </div>
+
     <div class="panel panel-default">
       <div class="panel-heading">
         <h3 class="panel-title">Dynamic:</h3>
