--- a/nodebootstrap/public/about.html
+++ b/nodebootstrap/public/about.html
@@ -17,7 +17,7 @@
         <div id="header">
             <font size=30 color="#9d1f0f">ANALYZR</font>
         </div>
-        <h1>About Us.</h1>
+        <h1>About <b>Us.</b></h1>
         </div>
     </div>
     <div class="container">
@@ -33,7 +33,7 @@
     And if they can, can we utilize them to make understanding articles easier?<br>
     <div class="panel panel-default">
       <div class="panel-heading">
-        <h3 class="panel-title">ANALYZR</h3>
+      <h3 class="panel-title"><b>ANALYZR</b></h3>
       </div>
       <div class="panel-body">
       Analyzr takes in the URL of an article and finds the topics which are most relevant to the article. 
@@ -42,7 +42,7 @@
       Analyzr allows users to input the address of an article, and using natural language processing 
       (via Alchemy API), extracts a list of topics mentioned in the article, and a detailed analysis
       of the article's sentiment towards those topics. <br>
-      Analyzr then presents the information in a variety of ways:
+      Analyzr then presents the information in a variety of ways:<br>
 
       <div class="panel panel-default">
       <div class="panel-heading">
