--- a/nodebootstrap/public/about.html
+++ b/nodebootstrap/public/about.html
@@ -36,9 +36,11 @@
       <h3 class="panel-title"><b>ANALYZR</b></h3>
       </div>
       <div class="panel-body">
+              <!--
       Analyzr takes in the URL of an article and finds the topics which are most relevant to the article. 
       It then calculates the sentiment/mood the article has towards each topic and presents the data in dynamic 
       graphs and tables. <br>
+      -->
       Analyzr allows users to input the address of an article, and using natural language processing 
       (via Alchemy API), extracts a list of topics mentioned in the article, and a detailed analysis
       of the article's sentiment towards those topics. <br>
@@ -46,21 +48,34 @@
 
       <div class="panel panel-default">
       <div class="panel-heading">
-        <h3 class="panel-title">Graph:</h3>
+        <h3 class="panel-title">Visual Depiction</h3>
       </div>
       <div class="panel-body">
+      Using D3's modeling software, graphs of the topics in the article are created, showing both
+      the topic's relevance to the article, as well as its "sentiment value", in a tooltip. <br>
+      A drop down menu lets the user switch between major groups of topics, for example Companies,
+      People, or Governments. <br>
+      Visual relation to the relevance and sentiment via color transitions and size changes are used
+      as an aid to the user.
+      <!--
     The data is graphed on an x-axis from negative to positive sentiment.  Each subject is colored to 
     match its sentiment and its size represents the relevance to the article. insert picture of graph
+    -->
       </div>
     </div>
     
     <div class="panel panel-default">
       <div class="panel-heading">
-        <h3 class="panel-title">Table:</h3>
+        <h3 class="panel-title">Concise Tables</h3>
       </div>
       <div class="panel-body">
+      For a more detailed analysis of the article, a table of the topics being displayed on the screen 
+      and relevant data about them, is displayed under the graph. Each listing contains a small breakdown
+      of the topic, useful links, and a more detailed breakdown of the sentiment and relevance scores.
+              <!--
      The raw data is presented in a table.  Each subject is presented along with its relevence and 
      sentiment to the article.  insert picture of table
+     -->
       </div>
     </div>
     </div>
