<br> tags are my friend

--- a/nodebootstrap/public/about.html
+++ b/nodebootstrap/public/about.html
@@ -30,7 +30,7 @@
     discuss the same trending topics in the tech industry. Each article has a positive/negative 
     spin on each subject, whether that subject be a person, company, technology, or other entity.<br> 
     As readers we pick up on these sentiments, but as programmers we ask: Can computers do the same?
-    And if they can, can we utilize them to make understanding articles easier?<br>
+    And if they can, can we utilize them to make understanding articles easier?<br> <br>
     <div class="panel panel-default">
       <div class="panel-heading">
       <h3 class="panel-title"><b>ANALYZR</b></h3>
@@ -44,7 +44,7 @@
       Analyzr allows users to input the address of an article, and using natural language processing 
       (via Alchemy API), extracts a list of topics mentioned in the article, and a detailed analysis
       of the article's sentiment towards those topics. <br>
-      Analyzr then presents the information in a variety of ways:<br>
+      Analyzr then presents the information in a variety of ways:<br><br>
 
       <div class="panel panel-default">
       <div class="panel-heading">
