added spot for actual devs

--- a/nodebootstrap/public/about.html
+++ b/nodebootstrap/public/about.html
@@ -87,5 +87,17 @@
     </div> <!-- /panel-body -->
     </div> <!-- /panel -->
     </div> <!-- /container -->
+
+    <!-- About the Devs -->
+    <div class="container">
+        <div class="panel panel-default">
+        <div class="panel-heading">
+        <h3 class="panel-title"><b>The Devs</b></h3>
+        </div> <!-- /panel-header -->
+        <div class="panel-body">
+        Both Aashish Sinha and Brian Bergeron are students are Carnegie Mellon University in Pittsburgh, Pennsylvania. 
+        </div> <!-- /panel-body -->
+        </div> <!-- /panel -->
+    </div> <!-- /container -->
 </body>
 </html>
