added some spice to the mix

--- a/nodebootstrap/public/about.html
+++ b/nodebootstrap/public/about.html
@@ -91,7 +91,17 @@
         <h3 class="panel-title"><b>The Devs</b></h3>
         </div> <!-- /panel-header -->
         <div class="panel-body">
-        Both Aashish Sinha and Brian Bergeron are students are Carnegie Mellon University in Pittsburgh, Pennsylvania. 
+        Both Aashish Sinha and Brian Bergeron are Computer Science students at Carnegie Mellon University 
+        in Pittsburgh, Pennsylvania. They are funded and supported (in no paticular order) by the following 
+        entities: <br><br>
+        <ul class="list-group">
+            <li class="list-group-item">The Bergeron Family</li>
+            <li class="list-group-item">The Sinha Family</li>
+            <li class="list-group-item">Yuengling Brewery</li>
+            <li class="list-group-item">Vladimir Vodka</li>
+            <li class="list-group-item">KGB</li>
+        </ul>
+        Aashish likes long walks on the beach, ice cream sundaes, and mosh pits.
         </div> <!-- /panel-body -->
         </div> <!-- /panel -->
     </div> <!-- /container -->
