--- a/nodebootstrap/public/index.html
+++ b/nodebootstrap/public/index.html
@@ -21,25 +21,29 @@
     <div class="carousel-inner">
         <div class="container">
           <div id="header">
-            <div id="logo">
-       
+            <div class="logo">
+
+
+              <a href = "/"></a>
+
               <svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="75px" height="75px">
                 <polygon points="37,0 0,75 75,75"
-                style="fill:#0"/>
-                <polygon points="37,16 13,67 63,67.5" 
-                style="fill:#9d1f0f"/>
-                <polygon points="37,33 25,60 50,60" 
                 style="fill:#fff"/>
+                <polygon points="37,10 7,71 68,71" 
+                style="fill:#9d1f0f"/>
+                <polygon points="37,28 20.5,63 55,63" 
+                style="fill:#000"/>
               </svg>
+              <font size=30 color="#9d1f0f">analyzr</font>
 
             </div>
-          <font size=30 color="#9d1f0f">analyzr</font>
+          
           <div id="aboutdiv"><a href="/about">About</a></div>
           </div>
           <h1>All of the facts, none of the <b>bullshit.</b></h1>
           <p>
             Take the guesswork out of analyzing text. <br>
-            Whether it's a political article, tech review, or blog post, Analyzr finds the key subjects and displays connotative information about them in presentable graphs and charts.
+            Whether it's a political article, tech review, or blog post, Analyzr graphs connotative information about the key subjects it finds in your text.
           </p>
           <center>
             <form class="form-inline" role="form" name="urlInForm" onsubmit="return linkRequest();">
