--- a/nodebootstrap/public/about.html
+++ b/nodebootstrap/public/about.html
@@ -15,9 +15,26 @@
     <div class="jumbotronAbout">
         <div class="container">
         <div id="header">
-            <font size=30 color="#9d1f0f">ANALYZR</font>
+
+           <div class="logo">
+
+              <a href = "/"></a>
+
+              <svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="75px" height="75px">
+                <polygon points="37,0 0,75 75,75"
+                style="fill:#fff"/>
+                <polygon points="37,10 7,71 68,71" 
+                style="fill:#9d1f0f"/>
+                <polygon points="37,28 20.5,63 55,63" 
+                style="fill:#000"/>
+              </svg>
+              <font size=30 color="#9d1f0f">analyzr</font>
+
+            </div>
+
+
         </div> <!-- /header -->
-        <h1>About <b>Us.</b></h1>
+        <h1>About</h1>
         </div> <!-- /container -->
     </div> <!-- /jumbotron -->
     <div class="container">
