[Filtering] fully functioning

--- a/nodebootstrap/public/index.html
+++ b/nodebootstrap/public/index.html
@@ -65,6 +65,10 @@
     <div id="tooltip" class="hidden"></div>
     <div id="graphContainer">
       <div id="graphTitle"></div>
+
+       <div id ="filterDiv" class="btn-group">
+        </div>
+
       <div id="graph"></div>
     </div>
     <br><br><br>
